@@ -10,6 +10,10 @@ Thanks to Björn "Vampire" Kautler and Matthieu Casanova for contributing to thi
 - Untitled buffer should not be created on VFS without write capability
   (#3399387) (Matthieu Casanova)
 
+- Fixed a corner case when trying to move caret during a buffer operation
+  (loading, transaction, undo) prevent to move the caret forever
+  (Matthieu Casanova)
+
 - Fixed several case where userinput during buffer loading cause exceptions
   (#3398342) (Matthieu Casanova)
 
